# vash

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ldblocks.cpp
apps/: ldblocks.cpp
include/: binnedOPH.hpp  gvarHash.hpp  similarityMatrix.hpp  vashFunctions.hpp
src/: binnedOPH.cpp  gvarHash.cpp  gvarHash.hpp  similarityMatrix.cpp  vashFunctions.cpp
tests/: allLDtests.cpp  alleleCounts.txt  asyncTests  asyncTests.cpp  bedBinTests.cpp  grpTests.cpp  ind197.bed  ind197.bim  ind197_397.bed  ind197_397.bim  ind197_397.fam  ldGrpTests.cpp  simHashTest.cpp  small.bim  test.cpp  testBinary.bed  testBinary.bim  testBinary.fam  testBinary.ld  testBinary.rel  testBinary.rel.id  testBinaryVar.tsv  testBinaryVar2.tsv  tests.cpp  threeByte.bed  wrongMB.bed
